--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18",
     "@vueuse/nuxt": "^10.2.0",
-    "nuxt": "^3.5.2"
+    "nuxt": "^3.5.2",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
