--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18",
+    "@vueuse/core": "^10.2.0",
     "@vueuse/nuxt": "^10.2.0",
     "nuxt": "^3.5.2",
     "prettier": "^2.8.8",
