--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "nuxt-app",
   "private": true,
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -12,6 +15,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/supabase": "^0.3.7",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@prisma/client": "^4.16.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18",
     "@vueuse/core": "^10.2.0",
@@ -19,5 +23,6 @@
     "nuxt": "^3.5.2",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
-  }
+  },
+  "type": "module"
 }
